@@ -1278,7 +1278,7 @@ with all arguments after the first being the arguments of that behavior.
 PROP_MODEXPERIENCE=\
 Property   : Prop_ModExperience\n\r\
 Targets    : MOBs, Items, Rooms, Areas\n\r\
-Parameters : (=,+,-,*,/)[NUMBER](%)( SELF)( RIDEOK)(;[MASK])\n\r\
+Parameters : (=,+,-,*,/)[NUMBER](%)( SELF)( RIDEOK)( TARGET)(;[MASK])\n\r\
 Example    : 500\n\r\
 Example    : 500;-race +orc\n\r\
 Example    : =10%\n\r\
@@ -1292,6 +1292,7 @@ the parm, so long as the player meets the mask parameters (optional). \
 The property will apply to the mob with this property him or herself only if the \
 word SELF is included in the first parameters. The property will apply to riders of \
 mobs with this property, unless RIDEOK is included in the first parameters. \
+This property will only apply to targeted xp (like combat) with the TARGET parameter. \
 Other arguments include: NEGATIVE to apply only to lost experience, or POSINEGA to apply \
 to positive and negative experience.  POSITIVE experience only is the default. \
 If placed on an item, the experience will be granted to the wearer (or wielder \
